# fwupd_rs

./: Cargo.toml
src/: error.rs  lib.rs
src/dfu/: config.rs  mod.rs  types.rs
src/protocols/: mod.rs
src/protocols/apl/: mod.rs  packet.rs  types.rs
src/protocols/lpl/: mod.rs  types.rs
