[package]
name = "fwupd-lib-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2"
socket2 = "0.5"
log = "0.4"
thiserror = "2.0"
bytes = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", features = ["codec"] }
crc32fast = "1.3"
ihex = "3.0"
